pen vectorizer change